--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,18 +3,10 @@ body {
 	margin: 0;
 	padding: 0;
 
-	font-family:
-		-apple-system,
-		BlinkMacSystemFont,
-		"Segoe UI",
-		Roboto,
-		Oxygen,
-		Ubuntu,
-		Cantarell,
-		"Fira Sans",
-		"Droid Sans",
-		"Helvetica Neue",
-		sans-serif;
+	color: var(--black);
+	background: #f5f6f8;
+
+	font-family: 'Noto Sans Mono', monospace;
 }
 
 a {
@@ -25,4 +17,28 @@ a {
 
 * {
 	box-sizing: border-box;
+}
+
+.visualyHidden {
+	position: absolute;
+
+	overflow: hidden;
+
+	width: 0;
+	height: 0;
+}
+
+:root {
+	--black: #3b434e;
+	--gray-light: #ebebeb;
+	--gray: #a4a4a4;
+	--gray-dark: #6c7077;
+	--white: white;
+	--primary: #7351f5;
+	--primary-hover: #6344df;
+	--red-light: #fea291;
+	--red: #fc836d;
+	--green: #007b48;
+	--green-light: #c8f8e4;
+	--font-family: 'Noto Sans Mono', monospace;
 }
